Changing Keys file to create class methods instead of instance methods

--- a/templates/Keys.h.erb
+++ b/templates/Keys.h.erb
@@ -8,6 +8,6 @@
 
 @interface <%= @name %> : NSObject
 <% @keys.each do |key, value| %>
-- (NSString *)<%= key %>;<% end %>
++ (NSString *)<%= key %>;<% end %>
 
 @end
